--- a/templates/athleteprofile.html
+++ b/templates/athleteprofile.html
@@ -32,35 +32,35 @@
    {% if details.athlete.filename1 != "" %}
   <div class="mySlides">
     <div class="numbertext">1 /{{details.athlete.counter}}</div>
-    <img src="static/uploads/{{details.athlete.filename1}}" style="width:100%">
+    <img src="static/uploads/{{details.athlete.filename1}}" style="width:850px;height:300px;">
   </div>
    {% endif %}
 
    {% if details.athlete.filename2 != "" %}
     <div class="mySlides">
     <div class="numbertext">2 / {{details.athlete.counter}}</div>
-    <img src="static/uploads/{{details.athlete.filename2}}" style="width:100%">
+    <img src="static/uploads/{{details.athlete.filename2}}" style="width:850px;height:300px;"">
     </div>
    {% endif %}
 
   {% if details.athlete.filename3 != "" %}
    <div class="mySlides">
    <div class="numbertext">3 /{{details.athlete.counter}}</div>
-   <img src="static/uploads/{{details.athlete.filename3}}" style="width:100%">
+   <img src="static/uploads/{{details.athlete.filename3}}" style="width:850px;height:300px;">
    </div>
   {% endif %}
 
   {% if details.athlete.filename4 != "" %}
    <div class="mySlides">
    <div class="numbertext">4 /{{details.athlete.counter}}</div>
-   <img src="static/uploads/{{details.athlete.filename4}}" style="width:100%">
+   <img src="static/uploads/{{details.athlete.filename4}}" style="width:850px;height:300px;">
    </div
   {% endif %}
 
   {% if details.athlete.filename|length>2 %}
    <div class="mySlides">
    <div class="numbertext">5 /{{details.athlete.counter}}</div>
-   <img src="static/uploads/{{details.athlete.filename5}}" style="width:100%">
+   <img src="static/uploads/{{details.athlete.filename5}}" style="width:850px;height:300px;">
   </div
   {% endif %}
 
