--- a/templates/athleteprofileedit.html
+++ b/templates/athleteprofileedit.html
@@ -17,13 +17,13 @@
   </div>
 </div>
 <div class="col-lg-8 col-sm-14" style="position:relative;top:0;left:30%">
-<form  role="form"  name="athleteform" id="athleteForm" action="#" method="post" enctype="multipart/form-data">
+<form   name="athleteform" id="athleteForm" action="#" method="post" enctype="multipart/form-data">
  <div class="col-lg-6 col-sm-12" style="position:relative;top:0%;left:100px">
  {% include "athleteprofiletemplate.html" %}
  </form>
  </div>
 
+ 
  <script src="static/js/formscripts.js"></script> 
-    
 </body>
 {% endblock main %}
