--- a/templates/viewsponsors.html
+++ b/templates/viewsponsors.html
@@ -11,7 +11,7 @@
             </div>
         </div>
         <div class="product_section_2 layout_padding">
-            <div class="row">
+            <div class="row" style="display:flex;justify-content:center;">
 
                 {% for item in docs %}
                         
