--- a/templates/admintemplate.html
+++ b/templates/admintemplate.html
@@ -11,70 +11,6 @@
                 <h4 class="bursh_text"> Welcome Super User</h1>
             </div>
         </div>
-<<<<<<< Updated upstream
-=======
-        <div class="product_section_2 layout_padding" >
-            <div class="row" >
-                <div class="col-lg-3 col-sm-6" >
-                    <div class="view_box">
-                    <a href="admintemplate?type=1"><p class="lorem_text">Approve Coaches</p></a><br>
-                    <p class="lorem_text">Update Coach-Athlete</p><br>
-                    <p class="lorem_text">Approve Pending Requests</p>
-                    </a>
-                    </div>
-                </div>
-            
-        
-        
-    
-        {% if request.args.get('type') == "1" %}
-   
-        <div class="col-lg-3 col-sm-6" align="right" style="top:-155px;left:300px;width:80%;">
-            <div class="row" ><div class="col-lg-6 col-sm-6">
-            <h4> Pending Coach Requests</h4></div>
-        </div>
-        <form  action="#" method="post">
-        {% for item in docs %}
-    
-        {% if item.coachdata.status == 0 %}     
-        <div class="row" >
-            <div class="col-lg-7 col-sm-6" >
-            
-           {{item.firstname}} &nbsp;{{item.surname}} &nbsp;  &nbsp; &nbsp;{{item.email}}  <input type="checkbox" id="statuscode" name="statuscoe" value="1"/>
-                <input type="hidden" name="coachID" id="coachID" value={{item._id}}>
-        </div>
-    </div>
-
-        {% endif %}
-        {% endfor %}
-        <input type="submit"  value="Approve" class="btn btn-info" style= "font-size:16px">
-        </form>
-        {% endif %}
-</div>
-        </div>
-    </div>
-</div>
-</div>
-</div>
-
-    <!-- Javascript files-->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery-3.0.0.min.js"></script>
-    <script src="js/plugin.js"></script>
-    <!-- sidebar -->
-    <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="js/custom.js"></script>
-    <!-- javascript --> 
-    <script src="js/owl.carousel.js"></script>
-    <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>  
-    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
-    <script>
-        function openNav() {
-        document.getElementById("mySidenav").style.width = "100%";
-        }
->>>>>>> Stashed changes
         
         </div>
         <div class="row" >
@@ -146,7 +82,7 @@
                         <span style="color: black; font-size:15px">
                         <select name="coachID" id="coachID">
                             {% for item in coachData %}
-                            <option value={{item._id}}>{{item.firstname}} {{item.surname}}</option>
+                            <option value={{item._id}}>{{item.firstname}}&nbsp;{{item.surname}}</option>
                             {% endfor %}
                         </select>
                         <br><br>
@@ -161,7 +97,7 @@
                         <span style="color: black; font-size:15px">
                         <select name="athleteID" id="athleteID">
                         {% for item1 in athleteData %}
-                        <option value={{item1._id}}>{{item1.fullname}}</option>
+                        <option value={{item1._id}}>{{item1.firstname}}&nbsp;{{item1.surname}}</option>
                         {% endfor %}
                         </select>
                         <br><br>
@@ -198,8 +134,8 @@
             <input type="hidden" name="requestID" id="requestID" value="{{item3._id}}">
          <svg width="1500" height="180" style="position:relative;top:10%;left:-95px">
            <g>
-               <rect x="70" y="20" rx="20" ry="20" width="850" height="100" style="fill:white;stroke:black;stroke-width:5;opacity:0.5"/>
-               <text x="8%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">{{item3.request_subject}}</text>
+               <rect x="70" y="20" rx="20" ry="20" width="950" height="100" style="fill:white;stroke:black;stroke-width:5;opacity:0.5"/>
+               <text x="10%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">{{item3.request_subject}}</text>
                <text x="17%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">{{item3.request_amt}}</text>
                <text x="28%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">{{item3.request_enddate}}</text>
                 
