--- a/templates/viewathletes.html
+++ b/templates/viewathletes.html
@@ -18,7 +18,7 @@
 
                         
          <div class="product_section_2 layout_padding">
-            <div class="row">
+            <div class="row" style="display:flex;justify-content: center;">
                 <div>
                     {% set n= (count/12)|round|int %}
                     {% for i in range(1,n) %}
@@ -27,6 +27,7 @@
                  
                 </div>
                 {% for item in docs %}
+                
                 <div class="col-lg-3 col-sm-6">
                     <div class="product_box" ><a href="athleteprofile">
                         <p class="lorem_text">{{item.firstname}} {{item.surname}}</p>
