--- a/templates/viewcoaches.html
+++ b/templates/viewcoaches.html
@@ -10,31 +10,14 @@
                
             </div>
         </div>
-        <div class="product_section_2 layout_padding">
-            <div class="row">
+        <div class="product_section_2 layout_padding" align="center">
+            <div class="row"  style="display:flex;justify-content: center;">
                 {% for item in docs %}
                 <div class="col-lg-3 col-sm-6">
-<<<<<<< Updated upstream
-                    <div class="view_box">
+                    <div class="view_box" >
                     <p class="lorem_text">{{item.firstname}}&nbsp;{{item.surname}}</p>
                     <p class="lorem_text">{{item.email}}</p>
                     <img src="static/uploads/{{item.profilepic}}" class="image_1_view">
-=======
-                    <div class="view_box"><a href="coachprofile">
-
-                            testingA
-
-                        {% for item in docs %}
-                        
-                             TITLE:  {{item}}  <br>  EMAIL:     
-                        
-                        {% endfor %}
-
-
-                    <h4 class="bursh_text">Coach name</h4>
-                    <p class="lorem_text">Sport</p>
-                    <img src="images/img-1.png" class="image_1_view">
->>>>>>> Stashed changes
                     </a>
                     </div>
                 </div>
