--- a/templates/coachtemplate.html
+++ b/templates/coachtemplate.html
@@ -113,7 +113,7 @@
                         
                     {% for item in docs %}
                 
-                        <option value={{item._id}}>{{item.firtname}} {{item.surname}}</option>
+                        <option value={{item._id}}>{{item.firstname}}&nbsp;{{item.surname}}</option>
                     {% endfor %}
                     </select>
                 </div>              
