--- a/templates/viewcoaches.html
+++ b/templates/viewcoaches.html
@@ -13,11 +13,12 @@
         <div class="product_section_2 layout_padding" align="center">
             <div class="row"  style="display:flex;justify-content: center;">
                 {% for item in docs %}
+                {% set image_url = get_image_url(item.profilepic) %}
                 <div class="col-lg-3 col-sm-6">
                     <div class="view_box" >
                     <p class="lorem_text">{{item.firstname}}&nbsp;{{item.surname}}</p>
                     <p class="lorem_text">{{item.email}}</p>
-                    <img src="static/uploads/{{item.profilepic}}" class="image_1_view">
+                    <img src={{image_url}} class="image_1_view">
                     </a>
                     </div>
                 </div>
