--- a/templates/athletetemplate.html
+++ b/templates/athletetemplate.html
@@ -28,7 +28,7 @@
                             <rect x="5" y="20" rx="20" ry="20" width="250" height="170" style="fill:white;stroke:black;stroke-width:5;opacity:0.5"/>
                             <text x="120px" y="10%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px"> <a href="athletetemplate?type=1">Change Password</a></text>
                             <text x="95px" y="20%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px"><a href="athletetemplate?type=2&id={{session['id'] }}">Edit Profile</a></text>
-                            <text x="93px" y="30%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px"><a href="athletetemplate?type=3">Blog Post</a></text>
+                            <text x="101px" y="30%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px"><a href="athletetemplate?type=3">Journal Entry</a></text>
                         </g>
                     </svg>
                 </div>
